--- a/mockHTML/index.html
+++ b/mockHTML/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" media="screen" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:100,200' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
   </head>
 
   <body onload="buildTable()">
@@ -18,6 +18,8 @@
         </div>
       </div>
       <div class="container">
+        <div id="rowStats"></div>
+
     <table class="responsive-table">
       <caption></caption>
       <thead>
