--- a/mockHTML/index.html
+++ b/mockHTML/index.html
@@ -9,7 +9,7 @@
     <div class="main">
       <div class="header">
         <div class="floatLeft">
-          <img src="img/favicon.png" style="vertical-align: top;"/>
+          <img src="img/logo.png" style="vertical-align: middle; width: 100px"/>
           <div class="btn">ADD NEW QOODLE</div>
         </div>
         <div class="floatRight">
