sistemata posizione textarea

--- a/mockHTML/create.html
+++ b/mockHTML/create.html
@@ -238,7 +238,7 @@
 
                 <br/>
                 <br/>
-                    <div>
+                    <div style="position: absolute;padding: 2px 24px;">
 
                     <textarea>Descrizione Qoodle</textarea>
 
@@ -248,6 +248,7 @@
                     <br/>
                     <br/>
                     <h3>Qoodle structure</h3>
+
 
                     <table class="responsive-table">
                         <caption></caption>
@@ -262,6 +263,9 @@
                     <div style="display: inline-block;position: absolute;margin-top: -60px;border: 1px solid #FFF;padding: 5px 10px;background-color: #FFF;right: 50px;">+</div>
 
                 </div>
+
+
+
             </div>
         </div>
     </div>
