rinominati id input

--- a/mockHTML/create.html
+++ b/mockHTML/create.html
@@ -39,18 +39,18 @@
             </div>
 
             <div class="tab-content" id="sidebar-tab-content" style="height: 346px;">
-                <div role="tabpanel" class="tab-pane active" id="titlefield">
+                <div role="tabpanel" class="tab-pane active" id="titleField">
                     <p>
                        COLUMN TITLE
                     </p>
 
-                    <div class="collapse in" id="stdFields" aria-expanded="true">
+                    <div class="collapse in" id="stdTitleField" aria-expanded="true">
                         <input type="text"/>
 
                     </div>
 
                 </div>
-                <div role="tabpanel" class="tab-pane active" id="minfield">
+                <div role="tabpanel" class="tab-pane active" id="minField">
                     <p>
                         SET MIN
                     </p>
@@ -61,7 +61,7 @@
                     </div>
 
                 </div>
-                <div role="tabpanel" class="tab-pane active" id="maxfield">
+                <div role="tabpanel" class="tab-pane active" id="maxField">
                     <p>
                         SET MAX
                     </p>
