migliorata dimensione sidebar

--- a/mockHTML/create.html
+++ b/mockHTML/create.html
@@ -38,7 +38,7 @@
                 </ul>
             </div>
 
-            <div class="tab-content" id="sidebar-tab-content" style="height: 346px;">
+            <div class="tab-content" id="sidebar-tab-content" style="height: 86vh;">
                 <div role="tabpanel" class="tab-pane active" id="titleField">
                     <p>
                        COLUMN TITLE
