allineati titoli, e ridimensionato textarea

--- a/mockHTML/create.html
+++ b/mockHTML/create.html
@@ -228,7 +228,7 @@
         <div class="col-md-9 text-center" id="main-content">
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active text-left" id="formBuilderContent">
-                    <h3>Qoodle info</h3>
+                    <h2>Qoodle info</h2>
                     <p>
                         <i class="fa fa-pencil fa-lg"></i>
                         <span class="lead">
@@ -238,16 +238,18 @@
 
                 <br/>
                 <br/>
-                    <div style="position: absolute;padding: 2px 24px;">
+                <div id="descrizione" style="position: relative">
 
-                    <textarea>Descrizione Qoodle</textarea>
+                    <textarea style="width: 640px; height: 96px;">Descrizione Qoodle</textarea>
 
                 </div>
 
 
-                    <br/>
-                    <br/>
-                    <h3>Qoodle structure</h3>
+                <br/>
+                <br/>
+                <br/><br/><br/><br/>
+
+                <h3 >Qoodle structure</h3>
 
 
                     <table class="responsive-table">
