--- a/mockHTML/create.html
+++ b/mockHTML/create.html
@@ -87,9 +87,14 @@
 
                 <div role="tabpanel" class="tab-pane active" id="invio">
 
-                    <div class="collapse in" id="stdButton" aria-expanded="true">
-                        <button type="submit">Aggiungi alla tabella</button>
+                    <div class="collapse in" style="display:inline-block"  id="stdAdd" aria-expanded="true">
+                        <button class="btnAdd" type="submit">Aggiungi alla tabella</button>
 
+                    </div>
+                <br/><br/>
+
+                    <div class="collapse in" id="stdDelete" aria-expanded="true">
+                        <button class="btnDelete" type="sumbit">Rimuovi ultima colonna</button>
                     </div>
 
                 </div>
@@ -262,7 +267,6 @@
                     </table>
 
 
-                    <div style="display: inline-block;position: absolute;margin-top: -60px;border: 1px solid #FFF;padding: 5px 10px;background-color: #FFF;right: 50px;">+</div>
 
                 </div>
 
