modificata src script in index, e provato altro handler in qoodle-view

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 
 <script src="./_assets/js/vendor.js"></script>
 <script src="./_assets/js/app.js"></script>
+<!--non sono sicuro della prossima riga; ricontrollare.-->
 <script src="./views/master-page/list-page.jsx"></script>
 
 <script>
