inizio modifica new-qoodle

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,12 @@
 <script src="./_assets/js/app.js"></script>
 <!--non sono sicuro della prossima riga; ricontrollare.-->
 <script src="./views/master-page/list-page.jsx"></script>
+<script src="./dati.js">
+console.log({elementi[0].nome});
+</script>
+
+
+
 
 <script>
     function convertDate(inputFormat) {
