--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link href="./_assets/css/themify-icons.css" rel="stylesheet">
     <link href="./_assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="./_assets/css/style.css" rel="stylesheet">
+    <link href="./_assets/css/vendor.css" rel="stylesheet">
 
 </head>
 <body>
