--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Qoodle</title>
     <meta charset="UTF-8" />
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 </head>
 <body>
 
@@ -11,6 +11,7 @@
 
 <script src="../src/_assets/js/vendor.js"></script>
 <script src="../src/_assets/js/app.js"></script>
+
 
 
 
